traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:13: error: ')' expected but $XMLSTART$< found.
      if(x<width && y >= 0 && y <height){//Si on est sur le plateau
                                ^TraversalDiagonal:21: error: illegal start of simple expression
    }
    ^